Fix publish column background color is too darken.

--- a/app/javascript/styles/mastodon-previous/diff.scss
+++ b/app/javascript/styles/mastodon-previous/diff.scss
@@ -116,6 +116,10 @@
   }
 }
 
+.columns-area--mobile {
+  background: lighten($ui-base-color, 13%);
+}
+
 // containers.scss
 .public-layout {
   .public-account-bio {
